[package]
name = "bonding-curve-pinocchio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
five8_const = "0.1.3"
pinocchio = "0.6.0"
pinocchio-token = "0.2.0"
solana-nostd-sha256 = "0.1.3"


[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "=2.0.8"
spl-token = "6.0.0"